force-app/main/default/objects/LT_Operational_Incident__c/LT_Operational_Incident__c.object-meta.xml
<CustomObject>
    <description>Ocorrencia Operacional - LogiTrack Operations 360.</description>
    <label>Ocorrencia Operacional</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>Codigo da Ocorrencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ocorrencias Operacionais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>