force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>LT_Assigned_To__c</fullName>
    <description>Usuario que esta tratando a ocorrencia.</description>
    <label>Responsavel pelo Tratamento</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ocorrencias Atribuidas</relationshipLabel>
    <relationshipName>LT_Assigned_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>