force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>LT_Days_Open__c</fullName>
    <description>Dias entre a deteccao e a resolucao (ou hoje, se ainda aberta).</description>
    <label>Dias em Aberto</label>
    <formula>IF(ISBLANK(LT_Detected_Date__c), NULL, IF(NOT(ISBLANK(LT_Resolved_Date__c)), DATEVALUE(LT_Resolved_Date__c) - LT_Detected_Date__c, TODAY() - LT_Detected_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>