force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Detected_Date__c</fullName>
    <description>Data em que a ocorrencia foi identificada.</description>
    <label>Detectada em</label>
    <required>true</required>
    <type>Date</type>
</CustomField>