force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Escalated__c.field-meta.xml
<CustomField>
    <fullName>LT_Escalated__c</fullName>
    <description>Marcada quando a ocorrencia foi escalada a coordenacao.</description>
    <label>Escalada</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>