force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Escalation_Date__c</fullName>
    <description>Data em que a ocorrencia foi escalada.</description>
    <label>Data de Escalonamento</label>
    <type>Date</type>
</CustomField>