force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Incident_Type__c</fullName>
    <description>Natureza da ocorrencia operacional.</description>
    <label>Tipo de Ocorrencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retido com Motorista</fullName>
            </value>
            <value>
                <fullName>Retido na Base</fullName>
            </value>
            <value>
                <fullName>Sem Movimentacao</fullName>
            </value>
            <value>
                <fullName>Suspeita de Extravio</fullName>
            </value>
            <value>
                <fullName>Avaria em Transporte</fullName>
            </value>
            <value>
                <fullName>Entrada no Galpao sem Expedicao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>