force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Is_Open__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Open__c</fullName>
    <description>Verdadeiro enquanto a ocorrencia nao foi resolvida nem cancelada.</description>
    <label>Em Aberto</label>
    <formula>AND(NOT(ISPICKVAL(LT_Status__c, "Resolvida")), NOT(ISPICKVAL(LT_Status__c, "Cancelada")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>