force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Overdue__c</fullName>
    <description>Verdadeiro quando a ocorrencia esta aberta e passou do prazo de resolucao.</description>
    <label>Fora do Prazo</label>
    <formula>AND(LT_Is_Open__c, NOT(ISBLANK(LT_Resolution_Deadline__c)), TODAY() &gt; LT_Resolution_Deadline__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>