force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Owner_Unit__c.field-meta.xml
<CustomField>
    <fullName>LT_Owner_Unit__c</fullName>
    <description>Base ou CD responsavel pelo tratamento.</description>
    <label>Unidade Responsavel</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Ocorrencias</relationshipLabel>
    <relationshipName>LT_Operational_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>