force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Priority__c.field-meta.xml
<CustomField>
    <fullName>LT_Priority__c</fullName>
    <description>Prioridade de tratamento.</description>
    <label>Prioridade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
                <default>true</default>
                <label>Media</label>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Critica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>