force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Resolution_Deadline__c.field-meta.xml
<CustomField>
    <fullName>LT_Resolution_Deadline__c</fullName>
    <description>Data limite para resolver a ocorrencia (SLA).</description>
    <label>Prazo de Resolucao</label>
    <type>Date</type>
</CustomField>