force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>LT_Resolution_Notes__c</fullName>
    <description>Registro do que foi feito para resolver.</description>
    <label>Notas de Resolucao</label>
    <type>LongTextArea</type>
    <length>8000</length>
</CustomField>