force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Resolution_Type__c</fullName>
    <description>Como a ocorrencia foi encerrada.</description>
    <label>Tipo de Resolucao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Reagendada</fullName>
            </value>
            <value>
                <fullName>Devolvida ao Remetente</fullName>
            </value>
            <value>
                <fullName>Encaminhada para Extravio</fullName>
            </value>
            <value>
                <fullName>Localizada e Reintegrada</fullName>
            </value>
            <value>
                <fullName>Sem Acao Necessaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>