force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Resolved_Date__c</fullName>
    <description>Data/hora da resolucao.</description>
    <label>Resolvida em</label>
    <type>DateTime</type>
</CustomField>