force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Responsible_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Responsible_Driver__c</fullName>
    <description>Motorista que esta com a remessa (retido com motorista).</description>
    <label>Motorista Envolvido</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Ocorrencias</relationshipLabel>
    <relationshipName>LT_Operational_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>