force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>LT_Root_Cause__c</fullName>
    <description>Causa raiz identificada.</description>
    <label>Causa Raiz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endereco Incorreto</fullName>
            </value>
            <value>
                <fullName>Cliente Ausente</fullName>
            </value>
            <value>
                <fullName>Falha de Triagem</fullName>
            </value>
            <value>
                <fullName>Extravio Interno</fullName>
            </value>
            <value>
                <fullName>Avaria</fullName>
            </value>
            <value>
                <fullName>Falha Sistemica</fullName>
            </value>
            <value>
                <fullName>Postura do Motorista</fullName>
            </value>
            <value>
                <fullName>Fora da Area de Cobertura</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>