force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Shipment__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipment__c</fullName>
    <description>Remessa afetada pela ocorrencia.</description>
    <label>Remessa</label>
    <referenceTo>LT_Shipment__c</referenceTo>
    <relationshipLabel>Ocorrencias Operacionais</relationshipLabel>
    <relationshipName>LT_Operational_Incidents</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>