force-app/main/default/objects/LT_Operational_Incident__c/fields/LT_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Status__c</fullName>
    <description>Situacao do tratamento da ocorrencia.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberta</fullName>
                <default>true</default>
                <label>Aberta</label>
            </value>
            <value>
                <fullName>Em Tratamento</fullName>
            </value>
            <value>
                <fullName>Aguardando Terceiro</fullName>
            </value>
            <value>
                <fullName>Escalada</fullName>
            </value>
            <value>
                <fullName>Resolvida</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>