force-app/main/default/objects/LT_Operational_Incident__c/validationRules/LT_Incident_Escalated_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Incident_Escalated_Requires_Date</fullName>
    <active>true</active>
    <description>Ocorrencia escalada exige data de escalonamento.</description>
    <errorConditionFormula>AND(LT_Escalated__c, ISBLANK(LT_Escalation_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_Escalation_Date__c</errorDisplayField>
    <errorMessage>Informe a Data de Escalonamento.</errorMessage>
</ValidationRule>