force-app/main/default/objects/LT_Operational_Incident__c/validationRules/LT_Incident_Resolved_Requires_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Incident_Resolved_Requires_Data</fullName>
    <active>true</active>
    <description>Ocorrencia Resolvida exige data e tipo de resolucao.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Resolvida"), OR(ISBLANK(LT_Resolved_Date__c), ISBLANK(TEXT(LT_Resolution_Type__c))))</errorConditionFormula>
    <errorDisplayField>LT_Resolution_Type__c</errorDisplayField>
    <errorMessage>Ao resolver informe a data e o tipo de resolucao.</errorMessage>
</ValidationRule>