force-app/main/default/objects/LT_Operational_Incident__c/validationRules/LT_Incident_Treatment_Needs_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Incident_Treatment_Needs_Owner</fullName>
    <active>true</active>
    <description>Ocorrencia Em Tratamento exige responsavel.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Em Tratamento"), ISBLANK(LT_Assigned_To__c))</errorConditionFormula>
    <errorDisplayField>LT_Assigned_To__c</errorDisplayField>
    <errorMessage>Atribua um responsavel antes de mover para Em Tratamento.</errorMessage>
</ValidationRule>