force-app/main/default/objects/LT_Operational_Incident__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipment__c</columns>
    <columns>LT_Incident_Type__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Priority__c</columns>
    <columns>LT_Detected_Date__c</columns>
    <columns>LT_Days_Open__c</columns>
    <columns>LT_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>