force-app/main/default/objects/LT_Operational_Incident__c/listViews/Candidatas_Extravio.listView-meta.xml
<ListView>
    <fullName>Candidatas_Extravio</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipment__c</columns>
    <columns>LT_Incident_Type__c</columns>
    <columns>LT_Detected_Date__c</columns>
    <columns>LT_Days_Open__c</columns>
    <columns>LT_Aging_Bucket__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Aging_Bucket__c</field>
        <operation>equals</operation>
        <value>+10 dias (candidata a extravio)</value>
    </filters>
    <label>Candidatas a Extravio (+10 dias)</label>
</ListView>