force-app/main/default/objects/LT_Operational_Incident__c/listViews/Fora_do_Prazo.listView-meta.xml
<ListView>
    <fullName>Fora_do_Prazo</fullName>
    <columns>NAME</columns>
    <columns>LT_Incident_Type__c</columns>
    <columns>LT_Priority__c</columns>
    <columns>LT_Detected_Date__c</columns>
    <columns>LT_Resolution_Deadline__c</columns>
    <columns>LT_Days_Open__c</columns>
    <columns>LT_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Is_Overdue__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Fora do Prazo</label>
</ListView>